--- a/res/layout/imageselect.xml
+++ b/res/layout/imageselect.xml
@@ -1,4 +1,3 @@
-
-    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical">
+    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:gravity="center">
         <ListView android:layout_width="fill_parent" android:id="@+id/imageList" android:layout_height="fill_parent"></ListView>
     </LinearLayout>
