--- a/res/menu/mode_menu.xml
+++ b/res/menu/mode_menu.xml
@@ -7,7 +7,7 @@
 		  android:icon="@drawable/pencil"
           android:title="@string/mode_pencil" />
     <item android:id="@+id/mode_text"
-		  android:icon="@drawable/type"
+		  android:icon="@drawable/text"
           android:title="@string/mode_text" ></item><item android:title="@string/mode_line" android:icon="@drawable/line" android:id="@+id/mode_line"></item>
     
 </menu>
