--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -11,6 +11,8 @@
     </item>-->
     <item android:id="@+id/save"
           android:title="@string/save" />
+    <item android:id="@+id/redo"
+          android:title="@string/redo" />
     <item android:id="@+id/pen_color"
           android:title="@string/pen_color" />
     <item android:id="@+id/pen_width"
@@ -25,6 +27,8 @@
           android:title="@string/share" />
     <item android:id="@+id/clear"
           android:title="@string/clear" />
+    <item android:id="@+id/zoom"
+          android:title="@string/zoom" />
     <item android:id="@+id/exit"
           android:title="@string/exit" />
     <item android:id="@+id/about"
