--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -12,7 +12,7 @@
     <item android:id="@+id/save"
           android:title="@string/save" />
     <item android:id="@+id/objmenu"
-          android:title="Object menu" />
+          android:title="@string/object_menu" />
     <item android:id="@+id/redo"
           android:title="@string/redo" />
     <item android:id="@+id/pen_color"
