--- a/res/layout/imageselect.xml
+++ b/res/layout/imageselect.xml
@@ -1,3 +1,29 @@
     <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:gravity="center">
-        <ListView android:layout_width="fill_parent" android:id="@+id/imageList" android:layout_height="fill_parent"></ListView>
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@android:string/search_go" />
+
+            <EditText
+                android:id="@+id/searchText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="text"
+                 >
+
+                <requestFocus />
+            </EditText>
+
+        </LinearLayout>
+
+        <ListView android:layout_width="fill_parent" android:id="@+id/imageList" android:background="#ffffff" android:layout_height="fill_parent"></ListView>
+
     </LinearLayout>
