--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical">
+<ScrollView android:layout_height="wrap_content" android:layout_width="fill_parent">
     <TableLayout android:id="@+id/tableLayout1" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent">
         <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/panelCountLabel" android:text="@+string/panel_count"></TextView>
         <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_gravity="center|fill" android:gravity="fill" android:layout_width="fill_parent">
@@ -49,3 +51,5 @@
 
         <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/settingsOk" android:text="@+string/ok"></Button>
     </TableLayout>
+</ScrollView>
+</LinearLayout>
