--- a/res/menu/edit_menu.xml
+++ b/res/menu/edit_menu.xml
@@ -12,4 +12,8 @@
           android:title="@string/remove" />
     <item android:id="@+id/lock"
           android:title="@string/lock" />
+    <item android:id="@+id/edit"
+          android:title="@string/enter_text" />
+    <item android:id="@+id/color"
+          android:title="@string/text_color" />
 </menu>
