--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" 
+    	xmlns:ads="http://schemas.android.com/apk/res-auto" 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
@@ -10,11 +10,10 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/adview"
         />
-    <com.google.ads.AdView android:id="@+id/adview"
+    <com.google.android.gms.ads.AdView android:id="@+id/adview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         ads:adSize="SMART_BANNER"
-        ads:adUnitId="a14e6b86ed7b452"
-        ads:loadAdOnCreate="true" />
+        ads:adUnitId="ca-app-pub-5472684851519205/3105630573" />
 </RelativeLayout>
